--- a/Documents/School_Files/Classes/WEB/WEB_2000s/WEB_2890/Portfolio/Whipple_Portfolio/cgSolutions.html
+++ b/Documents/School_Files/Classes/WEB/WEB_2000s/WEB_2890/Portfolio/Whipple_Portfolio/cgSolutions.html
@@ -138,7 +138,7 @@
 <footer id="footer" class="bg-secondary">
     <div class="container">
         <!-- section-title -->
-        <div class="row py-3 justify-content-center">
+        <div class="col-md-12 col-xs-12 col-sm-12 text-center py-3">
             <img src="img/icon-white.png" class="footer-logo" alt="AW Logo">
         </div>
         <!-- end of section-title -->
